css/main.css
/*Changes made here go to everything within the body tags*/
body {
    margin: 0;
    font-size: 16px;
    font-family: sans-serif;
    font-style:normal;
    color: #333333;
    line-height: 1.6em;
    overflow: auto;
    background-color: f0ebe1;
    background-repeat: no-repeat;


}

.index {
    display: flex;
    flex-wrap: wrap;
}

.collection_title {

    font-size: 34px;
    font-style: normal;
    font-weight: 400;
}

.promo-banner {
    background-color: #eae1d1;
}

/*all p tags*/


/*all a tags*/
a{
    text-decoration: none;
    font-size: 1rem;
}

.icon-facebook {
    width: 15px;
    height: 15px;
}

.icon-youtube {
    width: 15px;
    height: 15px;
}

.icon-instagram {
    width: 15px;
    height: 15px;
}

.social-icons {
    list-style-type: none;
    /* Need help Adon (want them these icons to display sideways), display inline isn't working*/
}

/*header Box containing the top of the page's content*/
header {
    display: flex;
    justify-content: space-between;
}

/*Middle Navigation (Home - Shop - About*/
nav {
    text-align: center;
}

/* */
.top-bar {
    width: 100%;
    height: 100%;
}

.promo-banner {
    text-align: center;
}

.homepagelink {
    text-decoration: none;
}

